applications/appke1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: appke1
spec:
    replicas: 1 # You can adjust the number of replicas as needed
    selector:
        matchLabels:
            app: appke1
    template:
        metadata:
            labels:
                app: appke1
        spec:
            containers:
                - name: appke1
                  image: drikkie/appke1
                  ports:
                      - containerPort: 8080 # Port the container is listening on

---
apiVersion: v1
kind: Service
metadata:
    name: appke1-service
spec:
    selector:
        app: appke1
    ports:
        - port: 80
          targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-appke1
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: "0" # future: limit upload file size
        nginx.ingress.kubernetes.io/auth-type: basic
        nginx.ingress.kubernetes.io/auth-secret: basic-auth
        nginx.ingress.kubernetes.io/auth-realm: "Authentication required"
spec:
    ingressClassName: nginx
    rules:
        - host: "daan.grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: appke1-service
                            port:
                                number: 80
