applications/ingress.yaml
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install nginx-ingress ingress-nginx/ingress-nginx --set controller.publishService.enabled=true
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    annotations:
        nginx.ingress.kubernetes.io/server-snippet: client_max_body_size 20M
spec:
    ingressClassName: nginx
    rules:
        - host: "grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: website-service
                            port:
                                number: 80
        - host: "powerpoint.grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: pdf-pptx-converter-service
                            port:
                                number: 80
        - host: "ocr.grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: ocr-service
                            port:
                                number: 80
