applications/main-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: website-deployment
spec:
    replicas: 1 # You can adjust the number of replicas as needed
    selector:
        matchLabels:
            app: website
    template:
        metadata:
            labels:
                app: website
        spec:
            containers:
                - name: website
                  image: ghcr.io/drikkie1608/grind-young-under-construction-website:sha-b4958c7
                  ports:
                      - containerPort: 80 # Port the container is listening on
            imagePullSecrets:
                - name: docker-registry-secret

---
apiVersion: v1
kind: Service
metadata:
    name: website-service
spec:
    selector:
        app: website
    ports:
        - port: 80
          targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-website
spec:
    ingressClassName: nginx
    rules:
        - host: "grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: website-service
                            port:
                                number: 80
