applications/ocr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ocr-deployment
spec:
    replicas: 1 # You can adjust the number of replicas as needed
    selector:
        matchLabels:
            app: ocr
    template:
        metadata:
            labels:
                app: ocr
        spec:
            containers:
                - name: ocr
                  image: drikkie/image-ocr-tool
                  ports:
                      - containerPort: 8080 # Port the container is listening on

---
apiVersion: v1
kind: Service
metadata:
    name: ocr-service
spec:
    selector:
        app: ocr
    ports:
        - port: 80
          targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-ocr
    annotations:
        nginx.ingress.kubernetes.io/auth-type: basic
        nginx.ingress.kubernetes.io/auth-secret: basic-auth
        nginx.ingress.kubernetes.io/auth-realm: "Authentication required"
spec:
    ingressClassName: nginx
    rules:
        - host: "ocr.grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: ocr-service
                            port:
                                number: 80
