applications/raven-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: raven-deployment
spec:
    replicas: 1 # You can adjust the number of replicas as needed
    selector:
        matchLabels:
            app: raven
    template:
        metadata:
            labels:
                app: raven
        spec:
            containers:
                - name: raven
                  image: drikkie/raven:latest
                  ports:
                      - containerPort: 80 # Port the container is listening on

---
apiVersion: v1
kind: Service
metadata:
    name: raven-service
spec:
    selector:
        app: raven
    ports:
        - port: 80
          targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-raven
spec:
    ingressClassName: nginx
    rules:
        - host: "raven.grindyoung.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: raven-service
                            port:
                                number: 80
